// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-progress"
  >
    <div
      class="usd1-react-ui-progress-ring"
      style="width:106px;height:106px;--progress:0%;--last:calc(100% - 0%);--size:106px;--stroke:6px;--bg-color:#FAFAFC;--trail-color:#E0E2EE;--fill-color:#3D73F2"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Progress renders correctly 2`] = `
LoadedCheerio {
  "0": <div
    class="usd1-react-ui-progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="usd1-react-ui-progress-bar p-progressbar p-component p-progressbar-determinate"
      data-pc-name="progressbar"
      data-pc-section="root"
      role="progressbar"
      style="--trail-color:#E0E2EE;--fill-color:#3D73F2;--label-color:#FFFFFF"
    >
      <div
        class="p-progressbar-value p-progressbar-value-animate"
        data-pc-section="value"
        style="width:0%;display:flex"
      >
        <div
          class="p-progressbar-label"
          data-pc-section="label"
        >
          0%
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
